--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -18,19 +18,17 @@
   margin: 57px 100px 0 0;
 }
 
-.connections,
-.connectionsContainer {
+.connections {
   @include flex (column, 0, 0);
 }
 
 // Email and Calendly Links
 
 .contactBox {
-  margin: 0 auto 20px auto;
-  display: inline-block;
+  margin-bottom: 20px;
   
   a {
-    @include flex (row, 0, 0);
+    @include flex (row, center, 0);
     padding: 15px 20px;
     border: 2px solid $black;
     
@@ -56,9 +54,9 @@
   }
 }
 
-.contactBox:nth-of-type(2) {
-  margin-bottom: 50px;
-}
+// .contactBox:nth-of-type(2) {
+//   margin-bottom: 50px;
+// }
 
 // Email / Social links transition duration
 .contactBox a,
@@ -70,9 +68,15 @@
 // Social Links
 
 .follow {
-  @include flex (row, center, center);
+  @include flex (0, 0, 0);
+
   p {
     padding-right: 10px;
+    align-self: center;
+  }
+
+  a {
+    display: block;
   }
 }
 
@@ -91,8 +95,8 @@
     }
   }
 
-  a:first-of-type,
-  a:nth-of-type(2) {
+  li:first-of-type a,
+  li:nth-of-type(2) a {
     margin-right: 10px;
   }
 
