--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -2,6 +2,7 @@ footer p {
   padding: 15px;
   background: lighten($button, 50%);
   text-align: center;
+  font-size: 1.6rem;
 }
 
   span.avoidWrap {
