--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,13 +1,7 @@
 // Fonts
-$baseFont: 'Montserrat', sans-serif;
-$heroFont: 'Playfair Display', serif;
-$titleFont: 'Playfair Display', serif;
-$newFont: 'Oswald', sans-serif;
-$anotherNewFont: 'Poppins', sans-serif;
-$testFont: 'Monda', sans-serif;
-$lato: 'Lato', sans-serif; 
-$roboto: 'Roboto Slab', sans-serif;
-
+$baseFont: 'Poppins', sans-serif;
+$secondaryFont: 'Lato', sans-serif; 
+$tertiaryFont: 'Roboto Slab', sans-serif;
 
 // Colours
 $black: #000;
