--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -49,6 +49,14 @@
   h1 span:nth-of-type(3) {
     font-size: 6rem;
   }
+
+  // Main -->
+
+  main {
+    background-size: 100%, 100%, 100%, 100%;
+    background-position: 100%, 100% 15%, 100% 67%, 100% 90%;
+  }
+
   // About Me -->
   
   .aboutContainer {
@@ -209,7 +217,7 @@
   // Mobile Nav -->
   .mobileNav {
     display: block;
-    font-size: 2.5rem;
+    font-size: 3.5rem;
   }
 
   nav {
@@ -249,7 +257,7 @@
   // Hero Statement
   h1 {
     span:nth-of-type(1) {
-      font-size: 1.8rem;
+      font-size: 2.5rem;
     }
 
     span:nth-of-type(2) {
@@ -257,7 +265,7 @@
     }
 
     span:nth-of-type(3) {
-      font-size: 2.7rem;
+      font-size: 2.9rem;
     }
   }
 
@@ -266,6 +274,11 @@
   }
 
   // Main --->
+
+    main {
+    background-size: 100%, 101%, 105%, 105%;
+    background-position: 100%, 100% 16%, -523% 74%, 359% 87%;
+  }
 
   h2 {
     padding: 50px 0;
@@ -287,6 +300,8 @@
 
     a {
       width: 226px;
+      height: 62px;
+      padding: 17px 15px;
     }
   }
 
@@ -307,19 +322,39 @@
     }
 
     a {
+      height: 62px;
+      padding: 15px 15px;
+      font-size: 2.5rem;
       text-align: center;
+    }
+
+    .projectContainer p:last-of-type {
+      padding: 10px 5px 30px 5px;
     }
   }
 
+  h4 {
+    font-weight: 600;
+  }
+
   .projectContainer {
-    padding: 20px 20px;
+    padding: 25px 10px;
     margin: 25px auto;
+
+    p:last-of-type {
+      font-size: 1.9rem;
+    }
   }
   
   .projectImage,
   .projectInfo {
     min-width: 0;
-    max-width: 300px;
+    max-width: 100%;
+  }
+
+  h4,
+  .projectInfo p {
+    padding: 0 5px;
   }
 
   // Toolkit -->
@@ -367,8 +402,23 @@
 
   // Contact -->
 
+  form {
+    width: 100%;
+
+    button {
+      height: 62px;
+      width: 200px;
+      font-size: 2.5rem;
+      padding: 15px 15px;
+    }
+  }
+
   .contact {
     padding-bottom: 50px;
+  }
+
+  .contactBox a i {
+    margin-top: 7px;
   }
 
   .contactContainer {
@@ -377,6 +427,10 @@
 
   .connections {
     width: 100%;
+
+    p {
+      font-size: 2.5rem;
+    }
   }
 
   .follow {
@@ -387,8 +441,16 @@
       display: none;
   }
 
+  .legendDesktop {
+    display: none;
+  }
+
+  .legendMobile {
+    display: inline;
+  }
+
   legend {
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
 
   // Mobile Button Transitions
@@ -412,6 +474,12 @@
 }
 
 @media (max-width: 344px) {
+  h1 {
+    span:nth-of-type(3) {
+      font-size: 2.7rem;
+    }
+
+  }
   .toolkitContainer {
     li,
     li:last-child {
