--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -315,6 +315,14 @@
     font-size: 3.5rem;
   }
 
+  .projectContainer {
+    left: 200px;
+  }
+
+  .projectAnimate {
+    left: 0;
+  }
+
   .projects {
     // Project Buttons
     a:first-of-type {
