--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -34,7 +34,7 @@ h1 {
 span:nth-of-type(3),
 h3,
 .connections p,
-legend {
+h5 {
   font-weight: 500;
 }
 
@@ -85,7 +85,7 @@ nav li,
 .toolkit ul p,
 .connections p,
 .connections a,
-legend {
+h5 {
   font-size: 2rem;
 }
 
