--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -54,10 +54,6 @@
   }
 }
 
-// .contactBox:nth-of-type(2) {
-//   margin-bottom: 50px;
-// }
-
 // Email / Social links transition duration
 .contactBox a,
 .socials a {
@@ -70,7 +66,7 @@
 .follow {
   @include flex (0, 0, 0);
 
-  p {
+  li:first-of-type {
     padding-right: 10px;
     align-self: center;
   }
@@ -95,26 +91,26 @@
     }
   }
 
-  li:first-of-type a,
-  li:nth-of-type(2) a {
+  li:nth-of-type(2) a,
+  li:nth-of-type(3) a {
     margin-right: 10px;
   }
 
-  li:nth-of-type(1) a {
+  li:nth-of-type(2) a {
     &:hover,
     &:focus {
       background: #2867b2; 
       border: 2px solid #2867b2;
     }
   }
-  li:nth-of-type(2) a {
+  li:nth-of-type(3) a {
     &:hover,
     &:focus {
       background: #211F1F; 
       border: 2px solid #211F1F;
     }
   }
-  li:nth-of-type(3) a {
+  li:nth-of-type(4) a {
     &:hover,
     &:focus {
       background: #1DA1F2; 
@@ -124,22 +120,22 @@
 }
 
 // Social and Form centering
-form legend,
-.socials li {
+form h5,
+.socials li:not(.socialsTitle) {
   text-align: center;
 }
 
 
 
 // Form
-.legendMobile {
+.formTitleMobile {
   display: none;
 }
 
 form {
   @include flex (column, 0, 0);
 
-  legend {
+  h5 {
     max-width: 500px;
     padding-bottom: 10px;
     display: block;
